// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`$defer > Query 1`] = `
"
{
  "object": {
    "$defer": true,
    "id": true
  }
}
--------------
{
  object @defer(if: true) {
    id
  }
}
"
`;

exports[`$defer > Query 2`] = `
"
{
  "object": {
    "$defer": false,
    "id": true
  }
}
--------------
{
  object @defer(if: false) {
    id
  }
}
"
`;

exports[`$defer > Query 3`] = `
"
{
  "object": {
    "id": true
  }
}
--------------
{
  object {
    id
  }
}
"
`;

exports[`$defer > Query 4`] = `
"
{
  "object": {
    "$defer": {
      "if": true
    },
    "id": true
  }
}
--------------
{
  object @defer(if: true) {
    id
  }
}
"
`;

exports[`$defer > Query 5`] = `
"
{
  "object": {
    "$defer": {
      "if": false
    },
    "id": true
  }
}
--------------
{
  object @defer(if: false) {
    id
  }
}
"
`;

exports[`$defer > Query 6`] = `
"
{
  "object": {
    "$defer": {},
    "id": true
  }
}
--------------
{
  object @defer(if: true) {
    id
  }
}
"
`;

exports[`$defer > Query 7`] = `
"
{
  "object": {
    "$defer": {},
    "id": true
  }
}
--------------
{
  object @defer(if: true) {
    id
  }
}
"
`;

exports[`$defer > Query 8`] = `
"
{
  "object": {
    "$defer": {
      "label": "foobar"
    },
    "id": true
  }
}
--------------
{
  object @defer(if: true, label: "foobar") {
    id
  }
}
"
`;

exports[`$include > Query 1`] = `
"
{
  "object": {
    "$include": true,
    "id": true
  }
}
--------------
{
  object @include(if: true) {
    id
  }
}
"
`;

exports[`$include > Query 2`] = `
"
{
  "object": {
    "$include": false,
    "id": true
  }
}
--------------
{
  object @include(if: false) {
    id
  }
}
"
`;

exports[`$include > Query 3`] = `
"
{
  "object": {
    "id": true
  }
}
--------------
{
  object {
    id
  }
}
"
`;

exports[`$include > Query 4`] = `
"
{
  "object": {
    "$include": {
      "if": true
    },
    "id": true
  }
}
--------------
{
  object @include(if: true) {
    id
  }
}
"
`;

exports[`$include > Query 5`] = `
"
{
  "object": {
    "$include": {
      "if": false
    },
    "id": true
  }
}
--------------
{
  object @include(if: false) {
    id
  }
}
"
`;

exports[`$include > Query 6`] = `
"
{
  "object": {
    "$include": {},
    "id": true
  }
}
--------------
{
  object @include(if: true) {
    id
  }
}
"
`;

exports[`$include > Query 7`] = `
"
{
  "object": {
    "$include": {},
    "id": true
  }
}
--------------
{
  object @include(if: true) {
    id
  }
}
"
`;

exports[`$skip > Query 1`] = `
"
{
  "object": {
    "$skip": true,
    "id": true
  }
}
--------------
{
  object @skip(if: true) {
    id
  }
}
"
`;

exports[`$skip > Query 2`] = `
"
{
  "object": {
    "$skip": false,
    "id": true
  }
}
--------------
{
  object @skip(if: false) {
    id
  }
}
"
`;

exports[`$skip > Query 3`] = `
"
{
  "object": {
    "id": true
  }
}
--------------
{
  object {
    id
  }
}
"
`;

exports[`$skip > Query 4`] = `
"
{
  "object": {
    "$skip": {
      "if": true
    },
    "id": true
  }
}
--------------
{
  object @skip(if: true) {
    id
  }
}
"
`;

exports[`$skip > Query 5`] = `
"
{
  "object": {
    "$skip": {
      "if": false
    },
    "id": true
  }
}
--------------
{
  object @skip(if: false) {
    id
  }
}
"
`;

exports[`$skip > Query 6`] = `
"
{
  "object": {
    "$skip": {},
    "id": true
  }
}
--------------
{
  object @skip(if: true) {
    id
  }
}
"
`;

exports[`$skip > Query 7`] = `
"
{
  "object": {
    "$skip": {},
    "id": true
  }
}
--------------
{
  object @skip(if: true) {
    id
  }
}
"
`;

exports[`$stream > Query 1`] = `
"
{
  "object": {
    "$stream": true,
    "id": true
  }
}
--------------
{
  object @stream(if: true) {
    id
  }
}
"
`;

exports[`$stream > Query 2`] = `
"
{
  "object": {
    "$stream": false,
    "id": true
  }
}
--------------
{
  object @stream(if: false) {
    id
  }
}
"
`;

exports[`$stream > Query 3`] = `
"
{
  "object": {
    "id": true
  }
}
--------------
{
  object {
    id
  }
}
"
`;

exports[`$stream > Query 4`] = `
"
{
  "object": {
    "$stream": {
      "if": true
    },
    "id": true
  }
}
--------------
{
  object @stream(if: true) {
    id
  }
}
"
`;

exports[`$stream > Query 5`] = `
"
{
  "object": {
    "$stream": {
      "if": false
    },
    "id": true
  }
}
--------------
{
  object @stream(if: false) {
    id
  }
}
"
`;

exports[`$stream > Query 6`] = `
"
{
  "object": {
    "$stream": {},
    "id": true
  }
}
--------------
{
  object @stream(if: true) {
    id
  }
}
"
`;

exports[`$stream > Query 7`] = `
"
{
  "object": {
    "$stream": {},
    "id": true
  }
}
--------------
{
  object @stream(if: true) {
    id
  }
}
"
`;

exports[`$stream > Query 8`] = `
"
{
  "object": {
    "$stream": {
      "label": "foobar"
    },
    "id": true
  }
}
--------------
{
  object @stream(if: true, label: "foobar") {
    id
  }
}
"
`;

exports[`$stream > Query 9`] = `
"
{
  "object": {
    "$stream": {
      "initialCount": 5
    },
    "id": true
  }
}
--------------
{
  object @stream(if: true, initialCount: 5) {
    id
  }
}
"
`;

exports[`alias > Query 1`] = `
"
{
  "id_as_x": true
}
--------------
{
  x: id
}
"
`;

exports[`alias > Query 2`] = `
"
{
  "id_as_x": true,
  "id_as_id2": true
}
--------------
{
  x: id
  id2: id
}
"
`;

exports[`alias > Query 3`] = `
"
{
  "id_as_x": {
    "$skip": true
  }
}
--------------
{
  x: id @skip(if: true)
}
"
`;

exports[`alias > Query 4`] = `
"
{
  "object_as_x": {
    "$skip": true,
    "id": true
  }
}
--------------
{
  x: object @skip(if: true) {
    id
  }
}
"
`;

exports[`args > Query 1`] = `
"
{
  "stringWithArgs": {
    "$": {
      "boolean": true,
      "float": 1
    }
  }
}
--------------
{
  stringWithArgs(boolean: true, float: 1)
}
"
`;

exports[`args > Query 2`] = `
"
{
  "stringWithArgs": {
    "$": {}
  }
}
--------------
{
  stringWithArgs
}
"
`;

exports[`args > Query 3`] = `
"
{
  "objectWithArgs": {
    "$": {
      "id": ""
    },
    "id": true
  }
}
--------------
{
  objectWithArgs(id: "") {
    id
  }
}
"
`;

exports[`args > Query 4`] = `
"
{
  "objectWithArgs": {
    "$": {},
    "id": true
  }
}
--------------
{
  objectWithArgs {
    id
  }
}
"
`;

exports[`args > custom scalars > Query > arg field 1`] = `
"
{
  "dateArg": {
    "$": {
      "date": "1970-01-01T00:00:00.000Z"
    }
  }
}
--------------
{
  dateArg(date: "1970-01-01T00:00:00.000Z")
}
"
`;

exports[`args > custom scalars > Query > arg field in list (null) 1`] = `
"
{
  "dateArgList": {
    "$": {
      "date": null
    }
  }
}
--------------
{
  dateArgList(date: null)
}
"
`;

exports[`args > custom scalars > Query > arg field in list 1`] = `
"
{
  "dateArgList": {
    "$": {
      "date": [
        "1970-01-01T00:00:00.000Z",
        "1970-01-01T00:00:00.001Z"
      ]
    }
  }
}
--------------
{
  dateArgList(date: ["1970-01-01T00:00:00.000Z", "1970-01-01T00:00:00.001Z"])
}
"
`;

exports[`args > custom scalars > Query > arg field in non-null 1`] = `
"
{
  "dateArgNonNull": {
    "$": {
      "date": "1970-01-01T00:00:00.000Z"
    }
  }
}
--------------
{
  dateArgNonNull(date: "1970-01-01T00:00:00.000Z")
}
"
`;

exports[`args > custom scalars > Query > arg field in non-null list (with list) 1`] = `
"
{
  "dateArgNonNullList": {
    "$": {
      "date": [
        "1970-01-01T00:00:00.000Z",
        "1970-01-01T00:00:00.001Z"
      ]
    }
  }
}
--------------
{
  dateArgNonNullList(
    date: ["1970-01-01T00:00:00.000Z", "1970-01-01T00:00:00.001Z"]
  )
}
"
`;

exports[`args > custom scalars > Query > arg field in non-null list (with null) 1`] = `
"
{
  "dateArgNonNullList": {
    "$": {
      "date": [
        null,
        "1970-01-01T00:00:00.000Z"
      ]
    }
  }
}
--------------
{
  dateArgNonNullList(date: [null, "1970-01-01T00:00:00.000Z"])
}
"
`;

exports[`args > custom scalars > Query > arg field in non-null list non-null 1`] = `
"
{
  "dateArgNonNullListNonNull": {
    "$": {
      "date": [
        "1970-01-01T00:00:00.000Z",
        "1970-01-01T00:00:00.001Z"
      ]
    }
  }
}
--------------
{
  dateArgNonNullListNonNull(
    date: ["1970-01-01T00:00:00.000Z", "1970-01-01T00:00:00.001Z"]
  )
}
"
`;

exports[`args > custom scalars > Query > input object field 1`] = `
"
{
  "dateArgInputObject": {
    "$": {
      "input": {
        "idRequired": "",
        "dateRequired": "1970-01-01T00:00:00.000Z",
        "date": "1970-01-01T00:00:00.001Z"
      }
    }
  }
}
--------------
{
  dateArgInputObject(
    input: {idRequired: "", dateRequired: "1970-01-01T00:00:00.000Z", date: "1970-01-01T00:00:00.001Z"}
  )
}
"
`;

exports[`args > custom scalars > Query > nested input object field 1`] = `
"
{
  "InputObjectNested": {
    "$": {
      "input": {
        "InputObject": {
          "idRequired": "",
          "dateRequired": "1970-01-01T00:00:00.000Z",
          "date": "1970-01-01T00:00:00.001Z"
        }
      }
    }
  }
}
--------------
{
  InputObjectNested(
    input: {InputObject: {idRequired: "", dateRequired: "1970-01-01T00:00:00.000Z", date: "1970-01-01T00:00:00.001Z"}}
  )
}
"
`;

exports[`enum > Query 1`] = `
"
{
  "result": {
    "$": {
      "case": "Object1"
    },
    "__typename": true
  }
}
--------------
{
  result(case: Object1) {
    __typename
  }
}
"
`;

exports[`other > Query 1`] = `
"
{
  "__typename": true
}
--------------
{
  __typename
}
"
`;

exports[`other > Query 2`] = `
"
{
  "string": true
}
--------------
{
  string
}
"
`;

exports[`other > Query 3`] = `
"
{
  "string": 1
}
--------------
{
  string
}
"
`;

exports[`other > Query 4`] = `
"
{
  "id": true,
  "string": false
}
--------------
{
  id
}
"
`;

exports[`other > Query 5`] = `
"
{
  "id": true,
  "string": 0
}
--------------
{
  id
}
"
`;

exports[`other > Query 6`] = `
"
{
  "id": true
}
--------------
{
  id
}
"
`;

exports[`other > Query 7`] = `
"
{
  "object": {
    "id": true
  }
}
--------------
{
  object {
    id
  }
}
"
`;

exports[`other > Query 8`] = `
"
{
  "objectNested": {
    "object": {
      "string": true,
      "id": true,
      "int": false
    }
  }
}
--------------
{
  objectNested {
    object {
      string
      id
    }
  }
}
"
`;

exports[`other > Query 9`] = `
"
{
  "objectNested": {
    "object": {
      "string": true,
      "id": true,
      "int": {
        "$skip": true
      }
    }
  }
}
--------------
{
  objectNested {
    object {
      string
      id
      int @skip(if: true)
    }
  }
}
"
`;

exports[`union > Query 1`] = `
"
{
  "unionFooBar": {
    "__typename": true
  }
}
--------------
{
  unionFooBar {
    __typename
  }
}
"
`;

exports[`union > Query 2`] = `
"
{
  "unionFooBar": {
    "onBar": {
      "int": true
    }
  }
}
--------------
{
  unionFooBar {
    ... on Bar {
      int
    }
  }
}
"
`;

exports[`union > Query 3`] = `
"
{
  "unionFooBar": {
    "onBar": {
      "$skip": true,
      "int": true
    }
  }
}
--------------
{
  unionFooBar {
    ... on Bar @skip(if: true) {
      int
    }
  }
}
"
`;
